[tool.poetry]
name = "andrew-utils"
version = "0.1.1"
description = ""
authors = ["Andrew Chen <andrew@jaanuu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
