[project]
name = "andrew-utils"
version = "0.1.1"
description = ""
authors = [{ name = "Andrew Chen", email = "andrew@jaanuu.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = []

[dependency-groups]
test = ["pytest>=8.2.1,<9.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["andrew_utils"]
